--- a/2-刷题.md
+++ b/2-刷题.md
@@ -1,8 +1,7 @@
-# Part 2 刷题
-
 **目标：**
 
-- 进入**题目列表**，选择合适题目。
+- 进入**题目列表**。
+- 尝试**查找**题目。
 - **提交**一次题目。
 - 学会使用**题单**。
 
@@ -43,4 +42,43 @@ $$\color{gray}\scriptsize\text{图 9 . 题目列表中的两行}$$
     - 紫色：省选/$\text{NOI-}$
     - 黑色：$\text{NOI/NOI+/CTSC}$
 - 最后一列用图表的方式反映了这道题目的 $\textbf{AC}$ **率**。其中整个图表的长度代表这道题目总的提交次数，而蓝色部分的长度则代表这些提交中通过的个数。
+****
 
+更多的时候我们是用**查找题目**功能来找题。进入图 $8$ 所示的题目列表页面，在上面的 `查找题目` 部分的输入框中输入你要找的题目的标题或题号，然后点击 `搜索` 按钮即可。如图 $10$，查找题目 `格雷码` 。
+
+![](https://cdn.luogu.com.cn/upload/image_hosting/s6r0qye8.png)
+
+$$\color{gray}\scriptsize\text{图 10 . 查找题目 \texttt{格雷码}}$$
+
+如果你想直接搜索题目内容，需要打开旁边的 `搜索题目内容` 勾选框。
+
+当然，洛谷还提供了更高级的搜索功能。点击下方的 `显示高级搜索选项` 即可看到更多的搜索选项（图 $11$）。
+
+![](https://cdn.luogu.com.cn/upload/image_hosting/v6bdfepz.png)
+
+$$\color{gray}\scriptsize\text{图 11 . 高级搜索选项}$$
+
+你可以指定 `所属题库`，`题目难度`，`算法标签`，`来源`，`时间`，`地区` 来搜索。
+
+****
+
+下面我们一起来看一道试机题目：[P1001 A+B Problem](https://www.luogu.com.cn/problem/P1001)。
+
+在图 $8$ 所示的题目列表中点击 `A+B Problem` 即可进入该题目（图 $12$）。
+
+![](https://cdn.luogu.com.cn/upload/image_hosting/1ie010kx.png)
+
+$$\color{gray}\scriptsize\text{图 12 . 题目页面 , 以 P1001 为例}$$
+
+题目主栏大致分为如下几部分。
+
+- **题目背景**：是这道题目的背景信息（可有可无），有可能是一个故事。这一段内容一般不影响做题，但如果你有时间的话还是可以读一下。
+- **题目描述**：这是每道题必有的部分，它描述了这个题的题意。
+- **题意翻译**：对于一些外语题目，会有这一栏。
+- **输入输出格式**：这也是必有的部分，它告诉了你你的程序该如何读取给定的数据，以及如何给出计算出的结果。
+- **样例**：一般来说，每道题都会有一个样例。把样例输入输入到你的程序中，你的程序应能给出与样例输出相同的结果（否则就说明你的程序错了，或，极少情况下，样例错了）。样例一般很小（有些正式比赛题会给大样例），手算也可以搞定，这样就减少了你通过样例调试程序的难度。
+- **说明与提示**：这一部分一般会放一些样例解释、数据规模与约定什么的。**尤其需要注意数据规模，它决定了你该用什么变量类型来存储数据，还决定了你该用什么复杂度的算法来解决此问题。**
+
+如果你看到有的题目上方有 `征集翻译` 的文字，你可以提交翻译，你在提交翻译前应阅读 [【官方】翻译提交注意事项](https://www.luogu.com.cn/discuss/show/253086)。
+
+如果您看到有题目不符合 [【官方】洛谷主题库题目规范](https://www.luogu.com.cn/discuss/show/174811)，请在 [【官方】洛谷主题库试题提供及反馈帖](https://www.luogu.com.cn/discuss/show/183512) 下方说明，**而不是**在题目讨论版发帖说明。
