--- a/2-刷题.md
+++ b/2-刷题.md
@@ -81,6 +81,46 @@ $$\color{gray}\scriptsize\text{图 12 . 题目页面 , 以 P1001 为例}$$
 - **样例**：一般来说，每道题都会有一个样例。把样例输入输入到你的程序中，你的程序应能给出与样例输出相同的结果（否则就说明你的程序错了，或，极少情况下，样例错了）。样例一般很小（有些正式比赛题会给大样例），手算也可以搞定，这样就减少了你通过样例调试程序的难度。
 - **说明与提示**：这一部分一般会放一些样例解释、数据规模与约定什么的。**尤其需要注意数据规模，它决定了你该用什么变量类型来存储数据，还决定了你该用什么复杂度的算法来解决此问题。**
 
-如果你看到有的题目上方有 `征集翻译` 的文字，你可以提交翻译，你在提交翻译前应阅读 [【官方】翻译提交注意事项](https://www.luogu.com.cn/discuss/show/253086)。
+如果你看到有的题目上方有 `征集翻译` 的文字，你可以提交翻译，你在提交翻译前应仔细阅读 [【官方】翻译提交注意事项](https://www.luogu.com.cn/discuss/show/253086)。**两次以上提交不符合翻译提交注意事项中所要求的翻译的用户可能会被禁言。**
 
 如果您看到有题目不符合 [【官方】洛谷主题库题目规范](https://www.luogu.com.cn/discuss/show/174811)，请在 [【官方】洛谷主题库试题提供及反馈帖](https://www.luogu.com.cn/discuss/show/183512) 下方说明，**而不是**在题目讨论版发帖说明。
+
+题目侧边栏大致分为以下几部分：
+
+- **题目基本信息**：包含了题目提供者，题目难度（难度分级刚刚提到过），以及历史分数（你在这道题目的所有提交中得到的最高得分，对于部分非主题库题目，不会显示具体得分而只会显示是否通过，$\text{AC ( Accepted ) }$ 即为通过）。
+- **提交记录**：点击 `提交记录` 按钮即可查看这道题目最近 $400$ 次提交的状态。
+- **题解**：点击 `查看题解` 按钮即可查看本题的题解。
+- **标签**：这道题目的算法标签（默认不显示）以及来源标签（默认显示）。
+- **相关讨论**：这道题目的讨论版下最近五条讨论以及进入这道题目讨论版的链接，默认不显示。
+- **推荐题目**：与这道题目相关的五道题目，默认不显示。
+- **洛谷推荐**：一个类似广告的东西，但宣传的都是站内的内容，没有其它无良广告，默认显示，可以点击右上角 `关闭` 将其关闭。
+
+对于默认不显示的内容，需要点击 `查看` 来显示。
+
+在认真读题之后，你就可以开始写程序了。你可以在本机上写代码和调试，也可以利用洛谷的在线 $\text{IDE}$。
+
+在任意洛谷页面点击左侧边栏的 `应用` 会出现一个菜单（图 $13$）。
+
+![](https://cdn.luogu.com.cn/upload/image_hosting/43mh03s7.png)
+
+$$\color{gray}\scriptsize\text{图 13 . 应用菜单}$$
+
+点击其中的 `在线 IDE`，进入在线 $\text{IDE}$ 页面（图 $14$）。
+
+![](https://cdn.luogu.com.cn/upload/image_hosting/6v1cfsja.png)
+
+$$\color{gray}\scriptsize\text{图 14 . 洛谷在线 IDE}$$
+
+在 `代码` 区域输入代码，然后在 `输入` 区域填写输入内容，随后点击 `运行` 即可看到在 `输出` 区域出现了结果。
+
+如果你的程序在运行时出现了错误（$\text{Runtime Error , RE}$），会在 `运行` 按钮的旁边显示 `运行时错误`。
+
+如果你的程序编译错误（$\text{Compile Error , CE}$），会在 `运行` 按钮的旁边显示 `编译失败`，并在 `输出` 区域显示编译信息。
+
+当然，你还可以在右上角选择语言，或者选择是否开 $\text{O2}$ 优化（如果你不知道什么是 $\text{O2}$ 优化，请自行必应或百度搜索）。
+
+总而言之，调试好程序后，就可以提交了。回到图 $12$ 所示的题目页面，在题目名称下方有一个 `提交答案` 按钮，点击它，进入提交页面（图 $15$）。
+
+![](https://cdn.luogu.com.cn/upload/image_hosting/ck4w0jhs.png)
+
+$$\color{gray}\scriptsize\text{图 15 . 提交页面 , 以 P1001 为例}$$
