--- a/2-刷题.md
+++ b/2-刷题.md
@@ -4,8 +4,12 @@
 
 - 进入**题目列表**。
 - 尝试**查找**题目。
+- 学会阅读**题目页面**。
+- 使用 **在线 $\textbf{IDE}$** 编辑一次代码。
 - **提交**一次题目。
-- 学会使用**题单**。
+- 学会阅读**评测记录**。
+- 使用**提交记录**查找你过去的提交。
+- 使用**题解**功能学习好的解法。
 
 ****
 
@@ -97,6 +101,8 @@ $$\color{gray}\scriptsize\text{图 12 . 题目页面 , 以 P1001 为例}$$
 
 对于默认不显示的内容，需要点击 `查看` 来显示。
 
+****
+
 在认真读题之后，你就可以开始写程序了。你可以在本机上写代码和调试，也可以利用洛谷的在线 $\text{IDE}$。
 
 在任意洛谷页面点击左侧边栏的 `应用` 会出现一个菜单（图 $13$）。
@@ -119,8 +125,63 @@ $$\color{gray}\scriptsize\text{图 14 . 洛谷在线 IDE}$$
 
 当然，你还可以在右上角选择语言，或者选择是否开 $\text{O2}$ 优化（如果你不知道什么是 $\text{O2}$ 优化，请自行必应或百度搜索）。
 
+洛谷在线 $\text{IDE}$ 有一个好处，就是它的内核基本和洛谷评测机相同，因此对于可能存在未定义行为的代码，使用在线 $\text{IDE}$ 调试更好。（这一点后面还会说到）。
+
+****
+
 总而言之，调试好程序后，就可以提交了。回到图 $12$ 所示的题目页面，在题目名称下方有一个 `提交答案` 按钮，点击它，进入提交页面（图 $15$）。
 
 ![](https://cdn.luogu.com.cn/upload/image_hosting/ck4w0jhs.png)
 
 $$\color{gray}\scriptsize\text{图 15 . 提交页面 , 以 P1001 为例}$$
+
+按照提交方式，洛谷的题目可分为两类，**提交代码**和**提交答案**。大部分题目采用传统方式提交。
+
+提交代码也就是把你的代码提交上去。在图 $15$ 所示的页面，把代码粘贴到光标所在的代码框里，然后点击下面红色的 `提交评测` 按钮即可。$\text{P1001}$ 即采用的是这种方式。
+
+提交答案是一种新颖的方式，例如 $\text{P1008}$ 三连击 就是一道比较简单的提交答案题。对于这类题目，你可以编程解决，也可以直接手算（如果你有能力的话）。在提交时，你可以选择直接（像提交代码题一样）提交一个按照规定格式输出的程序，这样的话提交方法和提交代码一样。
+
+对于提交答案题，你还可以直接提交一个包含答案的文本文件。将每个测试点的答案按照题目所要求的输出格式写在一个文本文档（`.txt` 文件）里。对于不同的测试点，它们的答案应该放在不同的文件里。建议把文件按照测试点编号命名，例如
+
+```
+1.txt //注释： 1 号测试点的答案。
+2.txt //注释： 2 号测试点的答案。
+3.txt //注释： 以此类推。
+```
+
+然后，将这几个文本文档放到同一个压缩包里，压缩包结构应如下所示。
+
+```
+xxx.zip //注释： xxx 可以是任意名字。
+ |- 1.txt
+ |- 2.txt
+ \- 3.txt
+```
+
+即，压缩包内**不能包含任何文件夹**，也不能包含任何多余的文件。例如下面这样是一个典型错例。
+
+```
+xxx.zip
+ \-xxx //注释： 这代表一个文件夹。
+    |- 1.txt
+    |- 2.txt
+    \- 3.txt
+```
+
+**注意：压缩包必须是 `.zip` 格式，不能是 `.rar` 格式，如果用 WinRAR 创建压缩文件的话，后者是默认选项，千万记得更改。**
+
+然后，进入图 $15$ 所示的提交界面，点击 `提交文件`，看到提交文件页面（图 $16$）。
+
+![](https://cdn.luogu.com.cn/upload/image_hosting/jo90vngw.png)
+
+$$\color{gray}\scriptsize\text{图 16 . 提交文件页面，以 P1008 为例}$$
+
+点击 `选择文件` 按钮，然后选择刚刚建好的压缩包。
+
+随后页面会变成这样（图 $17$）。
+
+![](https://cdn.luogu.com.cn/upload/image_hosting/9tovj4kp.png)
+
+$$\color{gray}\scriptsize\text{图 17 . 选择文件之后的提交文件页面}$$
+
+点击红色的 `提交评测` 按钮即可。
