Thanks to @ThisNameHas20Letters , fix a mistake.

--- a/2-开始刷题.md
+++ b/2-开始刷题.md
@@ -308,7 +308,7 @@ $$\color{gray}\scriptsize\text{图 23 . 查找记录}$$
 
 ****
 
-也许你会在类似图 $21$ 的记录页面看到一种例外情况，用户名显示为黑色的 `匿名用户`，且状态显示为 $\text{Unshown}$。这类用户开启了**完全隐私保护**，除 $\text{TA}$ 所在的团队的管理员（关于团队，后文会介绍）以及洛谷管理员外的用户无法查看具体记录信息。
+也许你会在类似图 $21$ 的记录页面看到一种例外情况，用户名显示为黑色的 `匿名用户`，且状态显示为 $\text{Unshown}$。这类用户开启了**完全隐私保护**，除洛谷管理员外的其它用户无法查看具体记录信息（**$\textbf{TA}$ 所在团队的管理员也无法查看！**）。
 
 事实上，洛谷用户可以决定自己提交的代码以及记录信息是否可被他人看见。调出图 $5$ 所示的菜单，点击 `个人设置`，可进入**个人设置页面**（图 $24$）。
 
