--- a/1-注册账号.md
+++ b/1-注册账号.md
@@ -8,6 +8,8 @@
 
 访问 <https://www.luogu.com.cn/> ，进入**洛谷主页**（如图 $1$）。
 
+更多关于洛谷，详见 [【官方】关于洛谷](https://www.luogu.com.cn/blog/luogu/about-luogu)。
+
 ![](https://cdn.luogu.com.cn/upload/image_hosting/a2s9166a.png)
 
 $$\color{gray}\scriptsize\text{图 1 . 未登录时的洛谷主页}$$
