--- a/1-注册账号.md
+++ b/1-注册账号.md
@@ -46,9 +46,9 @@ $$\color{gray}\scriptsize\text{图 4 . 登录页面}$$
 
 在主页上，把鼠标悬停在右上角自己的头像上方，会出现一个菜单（图 $5$）。
 
-![](https://cdn.luogu.com.cn/upload/image_hosting/yjjt396d.png)
+![](https://cdn.luogu.com.cn/upload/image_hosting/dcfl9hv4.png)
 
-$$\color{gray}\scriptsize\text{图 5 . 菜单, 为保护隐私, 用户名经过了人工处理}$$
+$$\color{gray}\scriptsize\text{图 5 . 菜单}$$
 
 点击下方的 `登出` 按钮可以**登出**。登出后跳转至图 $1$ 所示的主页。
 
